--- a/about.html
+++ b/about.html
@@ -36,14 +36,14 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-3">
 					<div class="logo">
-						<h2 class="site-logo">KC</h2>
+						<h2 class="site-logo">Kevin Crespin</h2>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
 					<a href="" class="site-btn header-btn">Get in touch</a>
 					<nav class="main-menu">
 						<ul>
-							<li><a href="home.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="contact.html">Contact</a></li>
