--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-xl-10 offset-xl-1">
-					<h2 class="section-title">HELLO I'M <span>KEVIN CRESPIN,</span><BR>WELCOME TO MY PORTFOLIO</h2>
+					<h2 class="section-title">I’m a freelance <span>digital designer</span>, with +10 years of experience</h2>
 				</div>
 			</div>
 		</div>
