--- a/index.html
+++ b/index.html
@@ -153,11 +153,12 @@
 			<h2 class="section-title mb-5">Let’s work together</h2>
 			<a href="" class="site-btn">Get in touch</a>
 			<div class="social-links">
-				<a href=""><span class="fa fa-pinterest"></span></a>
-				<a href=""><span class="fa fa-linkedin"></span></a>
-				<a href=""><span class="fa fa-instagram"></span></a>
-				<a href=""><span class="fa fa-facebook"></span></a>
-				<a href=""><span class="fa fa-twitter"></span></a>
+				<a href="https://www.instagram.com/kevincrespin/" target="_blank"><span class="fa fa-instagram"></span></a>
+				<a href="https://www.facebook.com/iamkevincrespin" target="_blank"><span class="fa fa-facebook"></span></a>
+				<a href="https://twitter.com/iamkevincrespin"target="_blank"><span class="fa fa-twitter"></span></a>
+				<a href="https://www.linkedin.com/in/kevin-crespin/" target="_blank"><span class="fa fa-linkedin"></span></a>
+				<a href="mailto:?to=kevincrespin.contact@gmail.com"><span class="fa fa-envelop"></span></a>
+
 			</div>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
