--- a/about.html
+++ b/about.html
@@ -76,23 +76,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae, rutrum diam. Aenean non gravida velit, eu consectetur neque. Nullam in volutpat massa. Duis scelerisque urna non lectus fringilla suscipit. Phasellus lacinia facilisis massa, pellentesque consectetur nunc. Nullam elit metus, condimentum nec libero quis, dapibus malesuada enim. Morbi semper condimentum pellentesque. </p>
+					<p>I’m multidisciplinary digital student based in Paris, focused on UI/UX design, Web Design and Photography. </p>
 					<div class="row mt-5">
-						<div class="col-md-4">
-							<div class="milestone">
-								<h2>1<span>test</span></h2>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="milestone">
-								<h2>2<span>test</span></h2>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="milestone">
-								<h2>3<span>test</span></h2>
-							</div>
-						</div>
+						<div class="col-md-4"></div>
+						<div class="col-md-4"></div>
+						<div class="col-md-4"></div>
 					</div>
 				</div>
 				<div class="col-lg-5 offset-lg-1">
@@ -108,8 +96,6 @@
 	<!-- footer section start -->
 	<footer class="footer-section text-center">
 		<div class="container">
-			<h2 class="section-title mb-5">Let’s work together</h2>
-			<a href="" class="site-btn">Get in touch</a>
 			<div class="social-links">
 				<a href=""><span class="fa fa-pinterest"></span></a>
 				<a href=""><span class="fa fa-linkedin"></span></a>
