--- a/about.html
+++ b/about.html
@@ -81,6 +81,14 @@
 						<div class="col-md-4"></div>
 						<div class="col-md-4"></div>
 						<div class="col-md-4"></div>
+						<div class="social-links">
+							<a href="https://www.instagram.com/kevincrespin/" target="_blank"><span class="fa fa-instagram fa-2x"></span></a>
+							<a href="https://www.facebook.com/iamkevincrespin" target="_blank"><span class="fa fa-facebook fa-2x"></span></a>
+							<a href="https://twitter.com/iamkevincrespin"target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
+							<a href="https://www.linkedin.com/in/kevin-crespin/" target="_blank"><span class="fa fa-linkedin fa-2x"></span></a>
+							<a href="mailto:?to=kevincrespin.contact@gmail.com"><span class="fa fa-envelop"></span></a>
+
+						</div>
 					</div>
 				</div>
 				<div class="col-lg-5 offset-lg-1">
@@ -91,18 +99,12 @@
 			</div>
 		</div>
 	</section>
+
 	<!-- page section end -->
 
 	<!-- footer section start -->
 	<footer class="footer-section text-center">
 		<div class="container">
-			<div class="social-links">
-				<a href=""><span class="fa fa-pinterest"></span></a>
-				<a href=""><span class="fa fa-linkedin"></span></a>
-				<a href=""><span class="fa fa-instagram"></span></a>
-				<a href=""><span class="fa fa-facebook"></span></a>
-				<a href=""><span class="fa fa-twitter"></span></a>
-			</div>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
