--- a/index.html
+++ b/index.html
@@ -150,13 +150,11 @@
 	<!-- footer section start -->
 	<footer class="footer-section text-center">
 		<div class="container">
-			<h2 class="section-title mb-5">Let’s work together</h2>
-			<a href="" class="site-btn">Get in touch</a>
 			<div class="social-links">
-				<a href="https://www.instagram.com/kevincrespin/" target="_blank"><span class="fa fa-instagram"></span></a>
-				<a href="https://www.facebook.com/iamkevincrespin" target="_blank"><span class="fa fa-facebook"></span></a>
-				<a href="https://twitter.com/iamkevincrespin"target="_blank"><span class="fa fa-twitter"></span></a>
-				<a href="https://www.linkedin.com/in/kevin-crespin/" target="_blank"><span class="fa fa-linkedin"></span></a>
+				<a href="https://www.instagram.com/kevincrespin/" target="_blank"><span class="fa fa-instagram fa-2x"></span></a>
+				<a href="https://www.facebook.com/iamkevincrespin" target="_blank"><span class="fa fa-facebook fa-2x"></span></a>
+				<a href="https://twitter.com/iamkevincrespin"target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
+				<a href="https://www.linkedin.com/in/kevin-crespin/" target="_blank"><span class="fa fa-linkedin fa-2x"></span></a>
 				<a href="mailto:?to=kevincrespin.contact@gmail.com"><span class="fa fa-envelop"></span></a>
 
 			</div>
