--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
 				<a href="https://www.facebook.com/iamkevincrespin" target="_blank"><span class="fa fa-facebook fa-2x"></span></a>
 				<a href="https://twitter.com/iamkevincrespin"target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
 				<a href="https://www.linkedin.com/in/kevin-crespin/" target="_blank"><span class="fa fa-linkedin fa-2x"></span></a>
-				<a href="mailto:?to=kevincrespin.contact@gmail.com"><span class="fa fa-envelop"></span></a>
-
+				<a href = "mailto:kevincrespin.contact@gmail.com"><span class="fa fa-envelope fa-2x"></span></a>
 			</div>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
