--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,13 @@
 			<div class="row">
 				<div class="col-xl-10 offset-xl-1">
 					<h2 class="section-title">So let's talk</h2>
+					<div class="social-links">
+						<a href="https://www.instagram.com/kevincrespin/" target="_blank"><span class="fa fa-instagram fa-2x"></span></a>
+						<a href="https://www.facebook.com/iamkevincrespin" target="_blank"><span class="fa fa-facebook fa-2x"></span></a>
+						<a href="https://twitter.com/iamkevincrespin"target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
+						<a href="https://www.linkedin.com/in/kevin-crespin/" target="_blank"><span class="fa fa-linkedin fa-2x"></span></a>
+						<a href = "mailto:kevincrespin.contact@gmail.com"><span class="fa fa-envelope fa-3x"></span></a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -72,7 +79,7 @@
 
 
 	<!-- page section start -->
-	<section class="page-section">
+	<!-- <section class="page-section">
 		<div class="container">
 			<form class="contact-form">
 				<div class="row">
@@ -97,24 +104,15 @@
 				</div>
 			</form>
 		</div>
-	</section>
+	</section> -->
 	<!-- page section end -->
 
 	<!-- footer section start -->
 	<footer class="footer-section text-center">
-		<div class="container">
-			<div class="social-links">
-				<a href=""><span class="fa fa-pinterest"></span></a>
-				<a href=""><span class="fa fa-linkedin"></span></a>
-				<a href=""><span class="fa fa-instagram"></span></a>
-				<a href=""><span class="fa fa-facebook"></span></a>
-				<a href=""><span class="fa fa-twitter"></span></a>
-			</div>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </div>
-		</div>
 	</footer>
 	<!-- footer section end -->
 
