--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
 	<footer class="footer-section text-center">
 		<div class="container">
 			<div class="social-links">
-				<a href="https://www.instagram.com/kevincrespin/" target="_blank"><span class="fa fa-instagram fa-2x"></span></a>
-				<a href="https://www.facebook.com/iamkevincrespin" target="_blank"><span class="fa fa-facebook fa-2x"></span></a>
-				<a href="https://twitter.com/iamkevincrespin"target="_blank"><span class="fa fa-twitter fa-2x"></span></a>
-				<a href="https://www.linkedin.com/in/kevin-crespin/" target="_blank"><span class="fa fa-linkedin fa-2x"></span></a>
-				<a href = "mailto:kevincrespin.contact@gmail.com"><span class="fa fa-envelope fa-2x"></span></a>
+				<a href="https://www.instagram.com/kevincrespin/" target="_blank"><span class="fa fa-instagram fa-1x"></span></a>
+				<a href="https://www.facebook.com/iamkevincrespin" target="_blank"><span class="fa fa-facebook fa-1x"></span></a>
+				<a href="https://twitter.com/iamkevincrespin"target="_blank"><span class="fa fa-twitter fa-1x"></span></a>
+				<a href="https://www.linkedin.com/in/kevin-crespin/" target="_blank"><span class="fa fa-linkedin fa-1x"></span></a>
+				<a href = "mailto:kevincrespin.contact@gmail.com"><span class="fa fa-envelope fa-1x"></span></a>
 			</div>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </div>
 		</div>
