--- a/journal.html
+++ b/journal.html
@@ -45,8 +45,8 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
-							<li><a href="journal.html">Journal</a></li>
 							<li><a href="contact.html">Contact</a></li>
+							<li><a href="journal.html">Journal</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -180,7 +180,7 @@
 				<a href=""><span class="fa fa-twitter"></span></a>
 			</div>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </div>
 		</div>
