--- a/about.html
+++ b/about.html
@@ -75,6 +75,12 @@
 	<section class="page-section">
 		<div class="container">
 			<div class="row">
+				<div class="row mt-5"></div>
+				<div class="col-lg-5 offset-lg-1">
+					<figure class="pic-frame">
+						<img src="img/about.jpg" alt="">
+					</figure>
+				</div>
 				<div class="col-lg-6">
 					<p>I’m multidisciplinary digital student based in Paris, focused on UI/UX design, Web Design and Photography. </p>
 					<div class="social-links">
@@ -84,16 +90,6 @@
 						<a href="https://www.linkedin.com/in/kevin-crespin/" target="_blank"><span class="fa fa-linkedin fa-1x"></span></a>
 						<a href = "mailto:kevincrespin.contact@gmail.com"><span class="fa fa-envelope fa-1x"></span></a>
 					</div>
-					<div class="row mt-5">
-						<div class="col-md-4"></div>
-						<div class="col-md-4"></div>
-						<div class="col-md-4"></div>
-					</div>
-				</div>
-				<div class="col-lg-5 offset-lg-1">
-					<figure class="pic-frame">
-						<img src="img/about.jpg" alt="">
-					</figure>
 				</div>
 			</div>
 		</div>
