--- a/about.html
+++ b/about.html
@@ -82,7 +82,15 @@
 					</figure>
 				</div>
 				<div class="col-lg-6">
-					<p>I’m multidisciplinary digital student based in Paris, focused on UI/UX design, Web Design and Photography. </p>
+					<p>
+					Hello.
+					<br>
+					<br>
+					I’m Kevin Crespin a multidisciplinary digital student <span>based in Paris</span>, focused on UI/UX design, Web Design and Photography. I studied visual arts and photography during my high school years at Institut Saint Luc in Tournai (Belgium) and I’m currently in Bachelor's degree in digital strategy and web design in Paris.
+					<br>
+					<br>
+					I also write articles on the news in the world, new technologies, interior design, architecture... and many of my passions ! You can discover them by clicking on "Journal" categories.
+					</p>
 					<div class="social-links">
 						<a href="https://www.instagram.com/kevincrespin/" target="_blank"><span class="fa fa-instagram fa-1x"></span></a>
 						<a href="https://www.facebook.com/iamkevincrespin" target="_blank"><span class="fa fa-facebook fa-1x"></span></a>
