--- a/journal.html
+++ b/journal.html
@@ -63,7 +63,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
-					<h2 class="section-title">Journal</h2>
+					<h2 class="section-title">KEVIN CRESPIN JOURNAL</h2>
 				</div>
 			</div>
 		</div>
