--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li><a href="journal.html">Journal</a></li>
+							<li><a href="journal.html">JOURNAL</a></li>
 
 						</ul>
 					</nav>
@@ -78,10 +78,9 @@
 		<div class="container">
 			<ul class="portfolio-filter controls">
 				<li class="control" data-filter="all">All</li>
-				<li class="control" data-filter=".web">Web design</li>
-				<li class="control" data-filter=".digital">Digital design</li>
-				<li class="control" data-filter=".rened">3D Renedering</li>
-				<li class="control" data-filter=".brand">Brand Identity</li>
+				<li class="control" data-filter=".graphicdesign">Graphic Design</li>
+				<li class="control" data-filter=".uiuxdesign">UI/UX Design</li>
+				<li class="control" data-filter=".photography">Photography</li>
 			</ul>
 		</div>
 		<div class="container-fluid p-md-0 ">
@@ -93,49 +92,49 @@
 						</div>
 					</a>
 				</div>
-				<div class="mix col-lg-6 col-md-6 digital">
+				<div class="mix col-lg-6 col-md-6 photography">
 					<a href="img/portfolio/2.jpg" class="portfolio-item set-bg " data-setbg="img/portfolio/2.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
 				</div>
-				<div class="mix col-lg-4 col-md-6 web">
+				<div class="mix col-lg-4 col-md-6 photography">
 					<a href="img/portfolio/3.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/3.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
 				</div>
-				<div class="mix col-lg-4 col-md-6 digital">
+				<div class="mix col-lg-4 col-md-6 uiuxdesign">
 					<a href="img/portfolio/4.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/4.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
 				</div>
-				<div class="mix col-lg-4 col-md-6 rened">
+				<div class="mix col-lg-4 col-md-6 graphicdesign">
 					<a href="img/portfolio/5.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/5.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
 				</div>
-				<div class="mix col-lg-12 col-md-6 brand">
+				<div class="mix col-lg-12 col-md-6 graphicdesign">
 					<a href="img/portfolio/6.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/6.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
 				</div>
-				<div class="mix col-lg-6 col-md-6 rened">
+				<div class="mix col-lg-6 col-md-6 photography">
 					<a href="img/portfolio/7.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/7.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
 				</div>
-				<div class="mix col-lg-6 col-md-6 brand">
+				<div class="mix col-lg-6 col-md-6 photography">
 					<a href="img/portfolio/8.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/8.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
