--- a/journal.html
+++ b/journal.html
@@ -46,7 +46,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li><a href="journal.html">Journal</a></li>
+							<li><a href="journal.html">JOURNAL</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -82,7 +82,7 @@
 							<img src="img/blog/1.jpg" alt="">
 						</figure>
 						<article class="blog-content">
-							<h2>Top 10 best digital assets in January</h2>
+							<h2>URBAN FARMING : LA VILLE VERTE</h2>
 							<div class="blog-meta">January 29, 2018</div>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</p>
 							<a href="" class="read-more">Read More</a>
