--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li><a href="journal.html">Journal</a></li>
+							<li><a href="journal.html">JOURNAL</a></li>
 						</ul>
 					</nav>
 				</div>
