--- a/journal.html
+++ b/journal.html
@@ -40,7 +40,6 @@
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
-					<a href="" class="site-btn header-btn">Get in touch</a>
 					<nav class="main-menu">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -75,6 +74,8 @@
 	<div class="page-section">
 		<div class="container">
 			<div class="row mb-5">
+
+				
 				<!-- blog item -->
 				<div class="col-md-6">
 					<div class="blog-item">
@@ -160,9 +161,6 @@
 					</div>
 				</div>
 			</div>
-			<div class="text-center pt-5">
-				<button class="site-btn btn-fade">Load More</button>
-			</div>
 		</div>
 	</div>
 	<!-- page section end -->
@@ -170,14 +168,12 @@
 	<!-- footer section start -->
 	<footer class="footer-section text-center">
 		<div class="container">
-			<h2 class="section-title mb-5">Let’s work together</h2>
-			<a href="" class="site-btn">Get in touch</a>
 			<div class="social-links">
-				<a href=""><span class="fa fa-pinterest"></span></a>
-				<a href=""><span class="fa fa-linkedin"></span></a>
-				<a href=""><span class="fa fa-instagram"></span></a>
-				<a href=""><span class="fa fa-facebook"></span></a>
-				<a href=""><span class="fa fa-twitter"></span></a>
+				<a href="https://www.instagram.com/kevincrespin/" target="_blank"><span class="fa fa-instagram fa-1x"></span></a>
+				<a href="https://www.facebook.com/iamkevincrespin" target="_blank"><span class="fa fa-facebook fa-1x"></span></a>
+				<a href="https://twitter.com/iamkevincrespin"target="_blank"><span class="fa fa-twitter fa-1x"></span></a>
+				<a href="https://www.linkedin.com/in/kevin-crespin/" target="_blank"><span class="fa fa-linkedin fa-1x"></span></a>
+				<a href = "mailto:kevincrespin.contact@gmail.com"><span class="fa fa-envelope fa-1x"></span></a>
 			</div>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | by <a href="https://colorlib.com" target="_blank">Colorlib</a>
