--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
-					<a href="" class="site-btn header-btn">Get in touch</a>
 					<nav class="main-menu">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -92,14 +91,14 @@
 						</div>
 					</a>
 				</div>
-				<div class="mix col-lg-6 col-md-6 photography">
+				<div class="mix col-lg-6 col-md-6 graphicdesign">
 					<a href="img/portfolio/2.jpg" class="portfolio-item set-bg " data-setbg="img/portfolio/2.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
 				</div>
-				<div class="mix col-lg-4 col-md-6 photography">
+				<div class="mix col-lg-4 col-md-6 graphicdesign">
 					<a href="img/portfolio/3.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/3.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
@@ -113,14 +112,14 @@
 						</div>
 					</a>
 				</div>
-				<div class="mix col-lg-4 col-md-6 graphicdesign">
+				<div class="mix col-lg-4 col-md-6 uiuxdesign">
 					<a href="img/portfolio/5.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/5.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
 				</div>
-				<div class="mix col-lg-12 col-md-6 graphicdesign">
+				<div class="mix col-lg-12 col-md-6 photography">
 					<a href="img/portfolio/6.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/6.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
