--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-3">
 					<div class="logo">
-						<h2 class="site-logo"><a href="index.html">KEVIN CRESPIN</a></h2>
+						<h2 class="site-logo"><a href="index.html">KEVIN CRESPIN</a><br>ABOUT</h2>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
@@ -85,10 +85,10 @@
 					Hello.
 					<br>
 					<br>
-					I’m Kevin Crespin a multidisciplinary digital student <span>based in Paris</span>, focused on UI/UX design, Web Design and Photography. I studied visual arts and photography during my high school years at Institut Saint Luc in Tournai (Belgium) and I’m currently in Bachelor's degree in digital strategy and web design in Paris.
+					I’m Kevin Crespin a multidisciplinary digital student based in Paris, focused on UI/UX design, Web Design and Photography. I studied visual arts and photography during my high school years at Institut Saint Luc in Tournai (Belgium) and I’m currently in Bachelor's degree in digital strategy and web design in Paris.
 					<br>
 					<br>
-					I also write articles on the news in the world, new technologies, interior design, architecture... and many of my passions ! You can discover them by clicking on "Journal" categories.
+					I also write articles on the news in the world, new technologies, interior design, architecture... and many of my passions ! You can discover them by clicking on <a href="journal.html" target="_blank" class="linkjournal">"Journal"</a> categories.
 					</p>
 					<div class="social-links">
 						<a href="https://www.instagram.com/kevincrespin/" target="_blank"><span class="fa fa-instagram fa-1x"></span></a>
