--- a/journal.html
+++ b/journal.html
@@ -36,7 +36,7 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-3">
 					<div class="logo">
-						<h2 class="site-logo"><a href="index.html">KEVIN CRESPIN</a><br> JOURNAL </h2>
+						<h2 class="site-logo"><a href="index.html">KEVIN CRESPIN</a><br>JOURNAL</h2>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
@@ -58,15 +58,16 @@
 	<!-- header section end -->
 
 	<!-- intro section start -->
-	<section class="intro-section">
-		<div class="container">
+	<section class="">
+		<div class="container text-center">
 			<div class="row">
-				<div class="col-12">
-					<h2 class="section-title">KEVIN CRESPIN JOURNAL</h2>
+				<div class="col-xl-10 offset-xl-1">
+					<p>J’écris sur l’actualité dans le monde, les nouvelles technologies, le design d’intérieur, l’architecture… </p>
 				</div>
 			</div>
 		</div>
 	</section>
+	<br>
 	<!-- intro section end -->
 
 
@@ -75,18 +76,14 @@
 		<div class="container">
 			<div class="row mb-5">
 
-				
-				<!-- blog item -->
 				<div class="col-md-6">
 					<div class="blog-item">
 						<figure class="thumb">
-							<img src="img/blog/1.jpg" alt="">
+							<a href="index.html" target="_blank"><img src="img/journal/zahahadid.jpg" alt=""></a>
 						</figure>
 						<article class="blog-content">
-							<h2>URBAN FARMING : LA VILLE VERTE</h2>
-							<div class="blog-meta">January 29, 2018</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</p>
-							<a href="" class="read-more">Read More</a>
+							<h2><a href="index.html" target="_blank">ZAHA HADID EN 5 PROJETS PHARE</a></h2>
+							<p><a href="index.html" target="_blank">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</a></p>
 						</article>
 					</div>
 				</div>
@@ -94,13 +91,11 @@
 				<div class="col-md-6">
 					<div class="blog-item">
 						<figure class="thumb">
-							<img src="img/blog/2.jpg" alt="">
+							<a href="index.html" target="_blank"><img src="img/journal/urbanfarming.jpg" alt=""></a>
 						</figure>
 						<article class="blog-content">
-							<h2>Top 10 best digital assets in January</h2>
-							<div class="blog-meta">January 29, 2018</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</p>
-							<a href="" class="read-more">Read More</a>
+							<h2><a href="index.html" target="_blank">URBAN FARMING : LA VILLE DE DEMAIN</a></h2>
+							<p><a href="index.html" target="_blank">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</a></p>
 						</article>
 					</div>
 				</div>
@@ -108,13 +103,11 @@
 				<div class="col-md-6">
 					<div class="blog-item">
 						<figure class="thumb">
-							<img src="img/blog/3.jpg" alt="">
+							<a href="index.html" target="_blank"><img src="img/journal/zahahadid.jpg" alt=""></a>
 						</figure>
 						<article class="blog-content">
-							<h2>Top 10 best digital assets in January</h2>
-							<div class="blog-meta">January 29, 2018</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</p>
-							<a href="" class="read-more">Read More</a>
+							<h2><a href="index.html" target="_blank">ZAHA HADID EN 5 PROJETS PHARE</a></h2>
+							<p><a href="index.html" target="_blank">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</a></p>
 						</article>
 					</div>
 				</div>
@@ -122,41 +115,11 @@
 				<div class="col-md-6">
 					<div class="blog-item">
 						<figure class="thumb">
-							<img src="img/blog/4.jpg" alt="">
+							<a href="index.html" target="_blank"><img src="img/journal/zahahadid.jpg" alt=""></a>
 						</figure>
 						<article class="blog-content">
-							<h2>Top 10 best digital assets in January</h2>
-							<div class="blog-meta">January 29, 2018</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</p>
-							<a href="" class="read-more">Read More</a>
-						</article>
-					</div>
-				</div>
-				<!-- blog item -->
-				<div class="col-md-6">
-					<div class="blog-item">
-						<figure class="thumb">
-							<img src="img/blog/5.jpg" alt="">
-						</figure>
-						<article class="blog-content">
-							<h2>Top 10 best digital assets in January</h2>
-							<div class="blog-meta">January 29, 2018</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</p>
-							<a href="" class="read-more">Read More</a>
-						</article>
-					</div>
-				</div>
-				<!-- blog item -->
-				<div class="col-md-6">
-					<div class="blog-item">
-						<figure class="thumb">
-							<img src="img/blog/6.jpg" alt="">
-						</figure>
-						<article class="blog-content">
-							<h2>Top 10 best digital assets in January</h2>
-							<div class="blog-meta">January 29, 2018</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</p>
-							<a href="" class="read-more">Read More</a>
+							<h2><a href="index.html" target="_blank">ZAHA HADID EN 5 PROJETS PHARE</a></h2>
+							<p><a href="index.html" target="_blank">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae.</a></p>
 						</article>
 					</div>
 				</div>
