--- a/index.html
+++ b/index.html
@@ -75,70 +75,107 @@
 	<!-- portfolio section start -->
 	<section class="portfolio-section">
 		<div class="container">
-			<ul class="portfolio-filter controls">
-				<li class="control" data-filter="all">All</li>
-				<li class="control" data-filter=".graphicdesign">Graphic Design</li>
-				<li class="control" data-filter=".uiuxdesign">UI/UX Design</li>
-				<li class="control" data-filter=".photography">Photography</li>
-			</ul>
+			<div class="col-lg-12">
+					<ul class="portfolio-filter controls">
+						<li class="control" data-filter="all">All</li>
+						<li class="control" data-filter=".web">Web design</li>
+						<li class="control" data-filter=".digital">Digital design</li>
+						<li class="control" data-filter=".rened">3D Renedering</li>
+						<li class="control" data-filter=".brand">Brand Identity</li>
+					</ul>
+			</div>
 		</div>
-		<div class="container-fluid p-md-0 ">
+		<div class="container-fluid p-0">
 			<div class="row portfolios-area">
-				<div class="mix col-lg-6 col-md-6 web">
-					<a href="img/portfolio/1.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/1.jpg">
+
+
+				<div class="mix col-md-6 col-lg-3 rened">
+					<a href="img/portfolio/3.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/3.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
+					<div class="portfolio-meta">
+						<h2>Brand Campaign</h2>
+						<p>Graphic design</p>
+					</div>
 				</div>
-				<div class="mix col-lg-6 col-md-6 graphicdesign">
-					<a href="img/portfolio/2.jpg" class="portfolio-item set-bg " data-setbg="img/portfolio/2.jpg">
+				<div class="mix col-md-6 col-lg-3 digital">
+					<a href="img/portfolio/4.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/4.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
+					<div class="portfolio-meta">
+						<h2>Brand Campaign</h2>
+						<p>Graphic design</p>
+					</div>
 				</div>
-				<div class="mix col-lg-4 col-md-6 graphicdesign">
-					<a href="img/portfolio/3.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/3.jpg">
+				<div class="mix col-md-6 col-lg-3 rened">
+					<a href="img/portfolio/5.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/5.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
+					<div class="portfolio-meta">
+						<h2>A cup of tea please</h2>
+						<p>Graphic design</p>
+					</div>
 				</div>
-				<div class="mix col-lg-4 col-md-6 uiuxdesign">
-					<a href="img/portfolio/4.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/4.jpg">
+				<div class="mix col-md-6 col-lg-3 brand">
+					<a href="img/portfolio/6.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/6.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
+					<div class="portfolio-meta">
+						<h2>Brand Campaign</h2>
+						<p>Graphic design</p>
+					</div>
 				</div>
-				<div class="mix col-lg-4 col-md-6 uiuxdesign">
-					<a href="img/portfolio/5.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/5.jpg">
+				<div class="mix col-md-6 col-lg-3 brand">
+					<a href="img/portfolio/9.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/9.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
+					<div class="portfolio-meta">
+						<h2>Brand Identity for Company</h2>
+						<p>Graphic design</p>
+					</div>
 				</div>
-				<div class="mix col-lg-12 col-md-6 photography">
-					<a href="img/portfolio/6.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/6.jpg">
+				<div class="mix col-md-6 col-lg-3 rened">
+					<a href="img/portfolio/10.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/10.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
+					<div class="portfolio-meta">
+						<h2>Brand Campaign</h2>
+						<p>Graphic design</p>
+					</div>
 				</div>
-				<div class="mix col-lg-6 col-md-6 photography">
-					<a href="img/portfolio/7.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/7.jpg">
+				<div class="mix col-md-6 col-lg-3 digital">
+					<a href="img/portfolio/7.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/7.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
+					<div class="portfolio-meta">
+						<h2>A cup of tea please</h2>
+						<p>Graphic design</p>
+					</div>
 				</div>
-				<div class="mix col-lg-6 col-md-6 photography">
-					<a href="img/portfolio/8.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/8.jpg">
+				<div class="mix col-md-6 col-lg-3 brand">
+					<a href="img/portfolio/8.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/8.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
+					<div class="portfolio-meta">
+						<h2>Brand Campaign</h2>
+						<p>Graphic design</p>
+					</div>
 				</div>
 			</div>
 		</div>
