--- a/index.html
+++ b/index.html
@@ -78,25 +78,23 @@
 			<div class="col-lg-12">
 					<ul class="portfolio-filter controls">
 						<li class="control" data-filter="all">All</li>
-						<li class="control" data-filter=".web">Web design</li>
-						<li class="control" data-filter=".digital">Digital design</li>
-						<li class="control" data-filter=".rened">3D Renedering</li>
-						<li class="control" data-filter=".brand">Brand Identity</li>
+						<li class="control" data-filter=".graphicdesign">Graphic Design</li>
+						<li class="control" data-filter=".uiuxdesign">UI/UX Design</li>
+						<li class="control" data-filter=".Photography">Photography</li>
 					</ul>
 			</div>
 		</div>
 		<div class="container-fluid p-0">
 			<div class="row portfolios-area">
 
-
-				<div class="mix col-md-6 col-lg-3 rened">
-					<a href="img/portfolio/3.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/3.jpg">
+				<div class="mix col-md-6 col-lg-3 graphic">
+					<a href="img/portfolio/IMG_3486.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/3.jpg">
 						<div class="pi-inner">
-							<h2>+ See Project</h2>
+							<h2>+ SEE PROJECT</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>Brand Campaign</h2>
+						<h2>BRAND CAMPAIGN </h2>
 						<p>Graphic design</p>
 					</div>
 				</div>
