--- a/index.html
+++ b/index.html
@@ -80,33 +80,33 @@
 						<li class="control" data-filter="all">All</li>
 						<li class="control" data-filter=".graphicdesign">Graphic Design</li>
 						<li class="control" data-filter=".uiuxdesign">UI/UX Design</li>
-						<li class="control" data-filter=".Photography">Photography</li>
+						<li class="control" data-filter=".photography">Photography</li>
 					</ul>
 			</div>
 		</div>
 		<div class="container-fluid p-0">
 			<div class="row portfolios-area">
 
-				<div class="mix col-md-6 col-lg-3 graphic">
-					<a href="img/portfolio/IMG_3486.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/3.jpg">
+				<div class="mix col-md-6 col-lg-3 photography">
+					<a href="img/portfolio/bruxelles_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/bruxelles_1.jpg">
 						<div class="pi-inner">
 							<h2>+ SEE PROJECT</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>BRAND CAMPAIGN </h2>
-						<p>Graphic design</p>
+						<h2>BRUXELLES</h2>
+						<p>Photography</p>
 					</div>
 				</div>
-				<div class="mix col-md-6 col-lg-3 digital">
-					<a href="img/portfolio/4.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/4.jpg">
+				<div class="mix col-md-6 col-lg-3 photography">
+					<a href="img/portfolio/PFW_LOREAL_PARIS_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PFW_LOREAL_PARIS_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>Brand Campaign</h2>
-						<p>Graphic design</p>
+						<h2>PFW : L'OREAL PARIS </h2>
+						<p>Photography</p>
 					</div>
 				</div>
 				<div class="mix col-md-6 col-lg-3 rened">
