--- a/index.html
+++ b/index.html
@@ -97,11 +97,10 @@
 						<h2>BRUXELLES</h2>
 						<p>Photography</p>
 					</div>
-				</div>
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/PFW_LOREAL_PARIS_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PFW_LOREAL_PARIS_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See Project</h2>
+							<h2>+ SEE PROJECT</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
