--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
-					<a href="img/portfolio/LA_DEFENSE/LA_DEFENSE_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/La_Defense_Vers_l_infini_et_l_au_dela/La_Defense_Vers_l_infini_et_l_au_dela_1.jpg">
+					<a href="img/portfolio/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (3)</h2>
+							<h2>+ See project (9)</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>LA DEFENSE<br>VERS L'INFINI ET L'AU DELÀ</h2>
+						<h2>BRUXELLES LA VILLE GRISE</h2>
 						<p>Photography</p>
 					</div>
-				</div>
+				</div>v
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/PFW2017_L_OREAL_PARIS/PFW2017_L_OREAL_PARIS_GUEST_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PFW2017_L_OREAL_PARIS/PFW2017_L_OREAL_PARIS_GUEST_1.jpg">
