--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>BRUXELLES LA VILLE GRISE</h2>
+						<h2>ARCHITECTURE<br>VERS L'INFINI ET L'AU DELA</h2>
 						<p>Photography</p>
 					</div>
-				</div>v
+				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/PFW2017_L_OREAL_PARIS/PFW2017_L_OREAL_PARIS_GUEST_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PFW2017_L_OREAL_PARIS/PFW2017_L_OREAL_PARIS_GUEST_1.jpg">
