--- a/index.html
+++ b/index.html
@@ -114,144 +114,144 @@
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA/LA_DEFENSE_VERS_L_INFINI_ET_L_AU_DELA_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (9)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>ARCHITECTURE<br>VERS L'INFINI ET L'AU DELA</h2>
-						<p>Photography</p>
+						<p>Photography (9)</p>
 					</div>
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/PFW2017_L_OREAL_PARIS/PFW2017_L_OREAL_PARIS_GUEST_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PFW2017_L_OREAL_PARIS/PFW2017_L_OREAL_PARIS_GUEST_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (10)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>PFW GUESTS 2017 : L'OREAL PARIS</h2>
-						<p>Photography</p>
+						<p>Photography (10)</p>
 					</div>
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/PFW2017_L_OREAL_PARIS/PFW2017_L_OREAL_PARIS_SHOW_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PFW2017_L_OREAL_PARIS/PFW2017_L_OREAL_PARIS_SHOW_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (10)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>PFW SHOW 2017 : L'OREAL PARIS</h2>
-						<p>Photography</p>
+						<p>Photography (10)</p>
 					</div>
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/Antti_Lovag_Palais_Bulles_de_Pierre_Cardin/Antti_Lovag_Palais_Bulles_de_Pierre_Cardin_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/Antti_Lovag_Palais_Bulles_de_Pierre_Cardin/Antti_Lovag_Palais_Bulles_de_Pierre_Cardin_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (3)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>ARCHITECTURE<br>PALAIS BULLES DE PIERRE CARDIN</h2>
-						<p>Photography</p>
+						<p>Photography (3)</p>
 					</div>
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/FONDATION_LOUIS_VUITTON/FONDATION_LOUIS_VUITTON_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/FONDATION_LOUIS_VUITTON/FONDATION_LOUIS_VUITTON_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (3)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2> ARCHITECTURE<br>FONDATION LOUIS VUITTON</h2>
-						<p>Photography</p>
+						<p>Photography (3)</p>
 					</div>
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/GARE_AVIGNON_TGV/GARE_AVIGNON_TGV_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/GARE_AVIGNON_TGV/GARE_AVIGNON_TGV_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project(2)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>ARCHITECTURE<br>GARE AVIGNON TGV</h2>
-						<p>Photography</p>
+						<p>Photography (2)</p>
 					</div>
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/BRUXELLES_QUARTIER_EUROPEEN/BRUXELLES_QUARTIER_EUROPEEN_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/BRUXELLES_QUARTIER_EUROPEEN/BRUXELLES_QUARTIER_EUROPEEN_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (3)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>BRUXELLES QUARTIER EUROPEEN</h2>
-						<p>Photography</p>
+						<p>Photography (3)</p>
 					</div>
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/PORTRAIT_LUMIERE/PORTRAIT_LUMIERE.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PORTRAIT_LUMIERE/PORTRAIT_LUMIERE.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (1)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>PORTRAIT LUMIERE</h2>
-						<p>Photography</p>
+						<p>Photography (1)</p>
 					</div>
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/CAP_BLANC_NEZ_SUNSET/CAP_BLANC_NEZ_SUNSET_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/CAP_BLANC_NEZ_SUNSET/CAP_BLANC_NEZ_SUNSET_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (3)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>CAP BLANC NEZ SUNSET</h2>
-						<p>Photography</p>
+						<p>Photography (3)</p>
 					</div>
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/MONACO_BLUE_CORRIDOR/MONACO_BLUE_CORRIDOR_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/MONACO_BLUE_CORRIDOR/MONACO_BLUE_CORRIDOR_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (2)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>ARCHITECTURE<br>MONACO BLUE CORRIDOR</h2>
-						<p>Photography</p>
+						<p>Photography (2)</p>
 					</div>
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/COTE_D_AZUR_BOAT_SERIE/COTE_D_AZUR_BOAT_SERIE_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/COTE_D_AZUR_BOAT_SERIE/COTE_D_AZUR_BOAT_SERIE_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (4)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>COTE D'AZUR BOAT SERIE</h2>
-						<p>Photography</p>
+						<p>Photography (4)</p>
 					</div>
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/MAN/MAN.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/MAN/MAN.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (1)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>MAN</h2>
-						<p>Photography</p>
+						<p>Photography (1)</p>
 					</div>
 				</div>
 
