--- a/index.html
+++ b/index.html
@@ -90,24 +90,24 @@
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (9)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>PARIS THE CITY OF FAST</h2>
-						<p>Photography</p>
+						<p>Photography (3)</p>
 					</div>
 				</div>
 
 				<div class="mix col-md-6 col-lg-3 photography">
 					<a href="img/portfolio/BRUXELLES_LA_VILLE_GRISE/BRUXELLES_LA_VILLE_GRISE_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/BRUXELLES_LA_VILLE_GRISE/BRUXELLES_LA_VILLE_GRISE_1.jpg">
 						<div class="pi-inner">
-							<h2>+ See project (9)</h2>
+							<h2>+ See project</h2>
 						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>BRUXELLES LA VILLE GRISE</h2>
-						<p>Photography</p>
+						<p>Photography (9)</p>
 					</div>
 				</div>
 
