--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
 		</div>
 		<div class="container-fluid p-0">
 			<div class="row portfolios-area">
+  <!-- portfolio section finish -->
+
 
 				<div class="mix col-md-6 col-lg-3 photography">
-					<a href="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_1.jpg">
+					<a href="img/portfolio/PARIS_THE_CITY_OF_FAST/PARIS_THE_CITY_OF_FAST_1.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/PARIS_THE_CITY_OF_SPEED/PARIS_THE_CITY_OF_FAST_1.jpg">
 						<div class="pi-inner">
 							<h2>+ See project</h2>
 						</div>
