--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-xl-10 offset-xl-1">
-					<h2 class="section-title">HELLO I'M <span>KEVIN CRESPIN</span><br>WELCOME TO MY <span>PORTFOLIO</span></h2>
+					<h2 class="section-title" id="principal-title">HELLO I'M <span>KEVIN CRESPIN</span><br>WELCOME TO MY <span>PORTFOLIO</span></h2>
 				</div>
 			</div>
 		</div>
