--- a/journal.html
+++ b/journal.html
@@ -84,7 +84,7 @@
 							<a href="articles/zaha_hadid.html"><img src="img/journal/zaha_hadid.jpg" alt=""></a>
 						</figure>
 						<article class="blog-content">
-							<h2><a href="articles/zaha_hadid.html">ZAHA HADID EN 5 PROJETS PHARE</a></h2>
+							<h2><a href="articles/zaha_hadid.html">ZAHA HADID EN 5 PROJETS PHARES</a></h2>
 							<p><a href="articles/zaha_hadid.html">Au cours des dernières années de sa vie, les visions audacieuses de Zaha Hadid sont devenus réalité, marquant les villes et les structures d'un...</a></p>
 						</article>
 					</div>
