--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Home - Kevin Crespin</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Riddle - Portfolio Template">
-	<meta name="keywords" content="portfolio, riddle, onepage, creative, html">
+	<meta name="description" content="I'm Kevin Crespin, Welcome to my portfolio">
+	<meta name="keywords" content="portfolio, kevincrespin, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
 	<link href="img/favicon.png" rel="shortcut icon"/>
@@ -17,7 +17,6 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/magnific-popup.css"/>
 	<link rel="stylesheet" href="css/style.css"/>
-
 
 	<!--[if lt IE 9]>
 	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
