--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<title>Home - Kevin Crespin</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="I'm Kevin Crespin, Welcome to my portfolio">
-	<meta name="keywords" content="portfolio, kevincrespin, html">
+	<meta name="keywords" content="portfolio, kevincrespin, ">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Kevin Crespin">
 	<!-- Favicon -->
 	<link href="img/favicon.png" rel="shortcut icon"/>
 
