--- a/journal.html
+++ b/journal.html
@@ -95,7 +95,7 @@
 						</figure>
 						<article class="blog-content">
 							<h2><a href="articles/Zaha_Hadid_en_5_Projets_Phares.html">ZAHA HADID EN 5 PROJETS PHARES</a></h2>
-							<p><a href="articles/Zaha_Hadid_en_5_Projets_Phares.html">Au cours des dernières années de sa vie, les visions audacieuses de Zaha Hadid sont devenus réalité, marquant les villes et les structures d'un...</a></p>
+							<p><a href="articles/Zaha_Hadid_en_5_Projets_Phares.html">Au cours des dernières années de sa vie, les visions audacieuses de Zaha Hadid sont devenues réalité, marquant les villes et les structures d'un...</a></p>
 						</article>
 					</div>
 				</div>
