--- a/journal.html
+++ b/journal.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Journal - Kevin Crespin</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Hello I'm Kevin Crespin, Welcome to my portfolio">
+	<meta name="description" content="J’écris sur l’actualité dans le monde, les nouvelles technologies, le design d’intérieur, l’architecture…">
 	<meta name="keywords" content="portfolio, kevincrespin, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
