--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 	<title>About - Kevin Crespin</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Hello I'm Kevin Crespin, Welcome to my portfolio">
+	<meta name="description" content="I’m Kevin Crespin a multidisciplinary digital student based in Paris, focused on UI/UX design, Graphic Design and Photography. ">
 	<meta name="keywords" content="portfolio, kevincrespin, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
