--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Home - Kevin Crespin</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Hello I'm Kevin Crespin, Welcome to my portfolio">
-	<meta name="keywords" content="portfolio, kevincrespin, ">
+	<meta name="keywords" content="portfolio, kevincrespin">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Kevin Crespin">
 	<!-- Favicon -->
