--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<title>Contact - Kevin Crespin</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="So let's talk">
-	<meta name="keywords" content="portfolio, kevincrespin, html">
+	<meta name="keywords" content="portfolio, kevincrespin">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
 	<link href="img/favicon.png" rel="shortcut icon"/>
