--- a/journal.html
+++ b/journal.html
@@ -4,7 +4,7 @@
 	<title>Journal - Kevin Crespin</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="J’écris sur l’actualité dans le monde, les nouvelles technologies, le design d’intérieur, l’architecture…">
-	<meta name="keywords" content="portfolio, kevincrespin, html">
+	<meta name="keywords" content="portfolio, kevincrespin">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
 	<link href="img/favicon.png" rel="shortcut icon"/>
