--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Contact - Kevin Crespin</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="So let's talk">
+	<meta name="description" content="So let's talk ! ">
 	<meta name="keywords" content="portfolio, kevincrespin">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
