--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Kevin Crespin</title>
+	<title>Home - Kevin Crespin</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Hello I'm Kevin Crespin, Welcome to my portfolio. I’m a multidisciplinary digital student based in Paris.">
 	<meta name="keywords" content="portfolio, kevincrespin">
