--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
 						</div>
 					</a>
 					<div class="portfolio-meta">
-						<h2>MAN</h2>
+						<h2>OMBRE ET LUMIÈRE</h2>
 						<p>Photographies (1)</p>
 					</div>
 				</div>
