--- a/journal.html
+++ b/journal.html
@@ -73,7 +73,7 @@
 			<div class="row">
 				<div class="col-xl-10 offset-xl-1">
 					<h2 class="section-title">JOURNAL</h2>
-					<p>J’écris sur l’actualité dans le monde, les nouvelles technologies, le design d’intérieur, l’architecture… </p>
+					<p>J’écris sur l’actualité dans le monde, la littérature, l’architecture, la photographie, le design…</p>
 				</div>
 			</div>
 		</div>
