--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Kevin Crespin</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Hello I'm Kevin Crespin. Welcome to my portfolio. I’m a multidisciplinary digital student based in Paris. Focused on UI/UX design, Graphic Design and Photography.">
+	<meta name="description" content="Welcome to my portfolio. I’m Kevin Crespin a multidisciplinary digital student based in Paris, focused on graphic design, illustration and photography.">
 	<meta name="keywords" content="portfolio, kevincrespin">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Kevin Crespin">
